--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,10 @@ ScaffoldingReadMe.txt
 # StyleCop
 StyleCopReport.xml
 
+# Executable and Library
+*.exe
+*.dll
+
 # Files built by Visual Studio
 *_i.c
 *_p.c
