--- a/DiverTest/DiverTest.csproj
+++ b/DiverTest/DiverTest.csproj
@@ -28,6 +28,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.IO.Ports" Version="9.0.3" />
 		<WeaverFiles Include="DiverCompiler.exe" />
 	</ItemGroup>
 
