--- a/DiverTest/DiverTest.csproj
+++ b/DiverTest/DiverTest.csproj
@@ -29,6 +29,7 @@
 		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="System.IO.Ports" Version="9.0.3" />
+		<PackageReference Include="System.Management" Version="9.0.4" />
 		<WeaverFiles Include="DiverCompiler.exe" />
 	</ItemGroup>
 
