--- a/DiverCompiler/DiverCompiler.csproj
+++ b/DiverCompiler/DiverCompiler.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringInterpolationHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
