--- a/DiverCompiler/packages.config
+++ b/DiverCompiler/packages.config
@@ -49,4 +49,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
