--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ tmp_ref/
 /DiverTest/native/code.c
 /DiverTest/TestLogic.diver
 /DiverTest/TestLogic.diver.map.json
+/DiverTest/TestLogic.cs.full
