--- a/3rd/CoralinkerHost/CoralinkerHost.csproj
+++ b/3rd/CoralinkerHost/CoralinkerHost.csproj
@@ -1,18 +1,33 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoralinkerSDK\CoralinkerSDK.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="..\..\DiverTest\DIVER\DIVERInterface.cs" Link="res\DIVERInterface.cs" />
+    <Compile Include="..\..\DiverTest\RunOnMCU.cs" Link="res\RunOnMCU.cs" />
+    <Compile Include="..\..\DiverTest\Extensions.cs" Link="res\Extensions.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="res\" />
+  </ItemGroup>
+
+  <!-- Do not treat runtime workspace state as source code -->
+  <ItemGroup>
+    <Compile Remove="data\**\*.cs" />
+    <None Remove="data\**\*" />
+    <Content Remove="data\**\*" />
+    <EmbeddedResource Remove="data\**\*" />
   </ItemGroup>
 
 </Project>
