Add SimpleTestLogic for basic DIVER runtime testing and implement VM glue code for MCU interaction. Updated SConscript for memory management, adjusted buffer sizes, and enhanced error handling in control logic. Improved DIVER program management and added program loading checks in TestDIVER.

--- a/MCUSerialBridge/mcu/SConscript
+++ b/MCUSerialBridge/mcu/SConscript
@@ -66,11 +66,11 @@ print(f"[INFO] ENABLE_DIVER_RUNTIME: {ENABLE_DIVER_RUNTIME}, HAS_DIVER_RUNTIME: 
 default_defines = {
     'DIRECT_CAN': 1,
     'IS_MCU': 1,
-    'ASYNC_QUEUE_CAPACITY': 256,
+    'ASYNC_QUEUE_CAPACITY': 128,
     'ASYNC_QUEUE_CAPACITY_LP': 2,
     'CONSOLE_MAX_STR': 512,
-    'CONSOLE_UPSTREAM_BUFFER_SIZE': 4096,
-    'MEMPOOL_SIZE': 65536,
+    'CONSOLE_UPSTREAM_BUFFER_SIZE': 2048,
+    'MEMPOOL_SIZE': 48 * 1024,
     'HAS_DIVER_RUNTIME': HAS_DIVER_RUNTIME_VALUE,
 }
 merged_defines = {**default_defines, **conf_defines, 'PRODUCTION_NAME': f'"{PDN}"'}
