Enhance DIVER runtime with console logging capabilities. Added support for Console.WriteLine callbacks in the MCU, enabling real-time log output to the host. Updated related APIs and structures for handling console messages, including buffer management for log data. Improved SConscript for clangd integration and adjusted various source files for better error handling and functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "dotnet.preferCSharpExtension": true
+    "dotnet.preferCSharpExtension": true,
+    "clangd.path": "clangd",
+    "C_Cpp.intelliSenseEngine": "Disabled"
 }
