--- a/3rd/CoralinkerSDK/CoralinkerSDK.csproj
+++ b/3rd/CoralinkerSDK/CoralinkerSDK.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -11,5 +12,20 @@
     <PackageReference Include="System.IO.Ports" Version="9.0.3" />
     <PackageReference Include="System.Management" Version="9.0.4" />
   </ItemGroup>
+
+  <!-- MCUSerialBridge wrapper from MCUSerialBridge project -->
+  <ItemGroup>
+    <Compile Include="..\..\MCUSerialBridge\wrapper\MCUSerialBridgeCLR.cs" Link="MCUSerialBridgeCLR.cs" />
+    <Compile Include="..\..\MCUSerialBridge\wrapper\MCUSerialBridgeError.cs" Link="MCUSerialBridgeError.cs" />
+  </ItemGroup>
+
+  <!-- Copy native DLL after build -->
+  <Target Name="CopyNativeDll" AfterTargets="Build">
+    <PropertyGroup>
+      <NativeDllSource>$(MSBuildThisFileDirectory)..\..\MCUSerialBridge\build\mcu_serial_bridge.dll</NativeDllSource>
+    </PropertyGroup>
+    <Copy SourceFiles="$(NativeDllSource)" DestinationFolder="$(OutputPath)" SkipUnchangedFiles="true" Condition="Exists('$(NativeDllSource)')" />
+    <Warning Text="Native DLL not found: $(NativeDllSource). Run SCons build in MCUSerialBridge first." Condition="!Exists('$(NativeDllSource)')" />
+  </Target>
 
 </Project>
