Implement MCU layout discovery and enhance runtime session management
- Added a new target in CoralinkerHost.csproj to copy the MCU serial bridge DLL after build.
- Updated README_FOR_AI.md with new MCU integration features, including layout discovery and CANMessage API.
- Refactored RuntimeSessionService to manage the last build and connect to nodes.
- Enhanced VariableInspectorPushService to periodically push node snapshots.
- Updated API routes to support new connect and node port configuration functionalities.
- Improved UI elements in app.js and app.css for better user experience.
- Added support for MCU layout information retrieval in MCUSerialBridge and related classes.

--- a/3rd/CoralinkerHost/CoralinkerHost.csproj
+++ b/3rd/CoralinkerHost/CoralinkerHost.csproj
@@ -22,6 +22,14 @@
     <Folder Include="res\" />
   </ItemGroup>
 
+  <Target Name="CopyMcuSerialBridgeDll" AfterTargets="Build">
+    <Copy
+      SourceFiles="$(ProjectDir)..\..\MCUSerialBridge\build\mcu_serial_bridge.dll"
+      DestinationFolder="$(OutDir)"
+      SkipUnchangedFiles="true"
+      Condition="Exists('$(ProjectDir)..\..\MCUSerialBridge\build\mcu_serial_bridge.dll')" />
+  </Target>
+
   <!-- Do not treat runtime workspace state as source code -->
   <ItemGroup>
     <Compile Remove="data\**\*.cs" />
