Add frontend structure for Coralinker DIVER Host
- Introduced a new Vue 3 + Vite frontend for the Coralinker DIVER Host.
- Added essential files including index.html, package.json, and configuration files for TypeScript and Vite.
- Implemented core components for asset management, control widgets, and project handling.
- Established a comprehensive API structure for file operations and project management.
- Included global styles and type definitions to ensure consistency across the application.
- Removed legacy files from the previous implementation to streamline the project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,7 @@ tmp_ref/
 /DiverTest/native/code.json
 /DiverTest/native/code.lib
 /3rd/CoralinkerHost/data
+
+
+/3rd/CoralinkerHost/wwwroot/
+/3rd/CoralinkerHost/wwwroot/*
