--- a/3rd/CoralinkerHost/ClientApp/package.json
+++ b/3rd/CoralinkerHost/ClientApp/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^10.0.0",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.3",
+    "@vue-flow/core": "^1.48.1",
+    "@vue-flow/minimap": "^1.5.4",
     "@vueuse/core": "^14.1.0",
     "axios": "^1.13.2",
     "litegraph.js": "^0.7.18",
     "monaco-editor": "^0.55.1",
     "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
+    "splitpanes": "^4.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/splitpanes": "^2.2.6",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/tsconfig": "^0.8.1",
     "sass": "^1.97.2",
