Implement firmware upgrade feature and enhance related services
- Added FirmwareUpgradeService to manage the complete firmware upgrade process.
- Introduced new API endpoints for parsing UPG files and starting firmware upgrades.
- Enhanced SignalR integration to broadcast upgrade progress to clients.
- Added UpgradeDialog component for user interaction during firmware upgrades.
- Updated existing components to support firmware upgrade functionality.
- Improved error handling and logging for the firmware upgrade process.
- Refactored types and interfaces to standardize firmware metadata handling.

--- a/3rd/CoralinkerSDK/CoralinkerSDK.csproj
+++ b/3rd/CoralinkerSDK/CoralinkerSDK.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Compile Include="..\..\MCUSerialBridge\wrapper\MCUSerialBridgeCLR.cs" Link="MCUSerialBridgeCLR.cs" />
     <Compile Include="..\..\MCUSerialBridge\wrapper\MCUSerialBridgeError.cs" Link="MCUSerialBridgeError.cs" />
+    <Compile Include="..\..\MCUSerialBridge\wrapper\MCUBootloaderHandlerCLR.cs" Link="MCUBootloaderHandlerCLR.cs" />
   </ItemGroup>
 
   <!-- Copy native DLL after build -->
