Add new CoralinkerTestCar project and CANOpen motor class implementation
- Introduced a new project for CoralinkerTestCar with a .csproj file for .NET 8.0.
- Added TestCar.cs containing CANOpen protocol constants, commands, and a motor class for managing CANOpen motors.
- Updated .gitignore to retain Vue component logs folder.
- Modified dev.bat and SConstruct for MCU build configuration.
- Added MCUSerialBridgeError.cs for error handling in the MCUSerialBridge.
- Created TECH.tex document outlining DIVER technology and features.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ bld/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
+# But keep Vue component logs folder
+!3rd/CoralinkerHost/ClientApp/src/components/logs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
