Enhance logging functionality with TerminalPanel component
- Added TerminalPanel.vue to provide a comprehensive terminal/logs interface with tab switching, build and run controls, and automatic log scrolling.
- Updated .gitignore files to retain logs for Vue components in the CoralinkerHost project.

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ bld/
 [Ll]ogs/
 # But keep Vue component logs folder
 !3rd/CoralinkerHost/ClientApp/src/components/logs/
+!3rd/CoralinkerHost/ClientApp/src/components/logs/**
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
